# phishlink-analyzer

./: .gitignore  README.md  app.py  pyproject.toml
src/core/: features_extractor.py  ml_analyzer.py  train_model.py
