[project]
name = "phishlink-analyzer"
version = "0.3.0"
description = "API web para análise híbrida de URLs, combinando Machine Learning e regras heurísticas para detecção de phishing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"tldextract",
	"python-dotenv",
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "flask",
    "beautifulsoup4",
    "requests",
    "python-whois"
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I"]
