[project]
name = "phishlink-analyzer"
version = "0.4.0"
description = "API web para análise de URLs, usando Machine Learning para detecção de phishing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"tldextract",
	"python-dotenv",
    "pandas",
    "scikit-learn",
    "numpy",
    "flask",
    "beautifulsoup4",
    "requests"
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I"]
